# mandelbrot-viewer-qt-quick

./: .gitignore  CMakeLists.txt  Info.qml  Options.qml  OutputGrid.qml  PaletteMenu.qml  README.md  RenderingMenu.qml  build.sh  configure.sh  instructions.cpp  instructions.h  main.cpp  main.qml  manager.cpp  manager.h  palette.cpp  palette.h  qml.qrc  renderer.cpp  renderer.h  run.sh  setup.sh  worker.cpp  worker.h
palettes/: BWIron.plt  BWIron1.plt  BlueRed.plt  Gradient.plt  Gray.plt  Iron1.plt  Natural.plt  Steps.plt
src/: CMakeLists.txt  PaletteMenu.qml  instructions.cpp  instructions.h  main.qml  palette.cpp  palette.h  palettes.qrc  qml.qrc  renderer.h  worker.cpp  worker.h
src/palettes/: BWRGB.plt  BWRainbow.plt  BWRainbowHC.plt  BlackRed.plt  Fire.plt  Iron.plt  Rainbow.plt  RainbowHC.plt  Sepia.plt  Temperature.plt  WBRGB.plt
